--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,15 @@
     <title>JD Real Estate</title>
   </head>
   <body>
+    <!--topbar-->
+    {% include 'partials/_topbar.html' %}
+    <!--navbar-->
+    {% include 'partials/_navbar.html' %}
+
+    <!--main-->
     {% block content %} {% endblock %}
+    <!-- Footer -->
+    {% include 'partials/_footer.html' %}
 
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/bootstrap.bundle.min.js' %}"></script>
