--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
     <link rel="stylesheet" href="{% static 'css/lightbox.min.css' %}">
 
-    <title>JD Real Estate</title>
+    <title>JD Real Estate {% block title %}{% endblock %}</title>
   </head>
   <body>
     <!--topbar-->
