--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,6 +2,7 @@
 
 {% load humanize %}
 
+{% block title %} | Welcome{% endblock %}
 {% block content %}
 <!-- Showcase -->
    <section id="showcase">
@@ -64,7 +65,8 @@
         </div>
       </div>
     </section>
-  
+    <!-- alerts -->
+    <!-- {% include 'partials/_alerts.html' %} -->
     <!-- Listings -->
     <section id="listings" class="py-5">
       <div class="container">
