--- a/templates/listings/listing.html
+++ b/templates/listings/listing.html
@@ -33,6 +33,8 @@
       </div>
     </section>
   
+    <!-- alerts -->
+    {% include 'partials/_alerts.html' %}
     <!-- Listing -->
     <section id="listing" class="py-4">
       <div class="container">
@@ -155,7 +157,7 @@
         </div>
       </div>
     </section>
-  
+
     <!-- Inquiry Modal -->
     <div class="modal fade" id="inquiryModal" role="dialog">
       <div class="modal-dialog">
@@ -178,7 +180,7 @@
               <input type="hidden" name="listing_id" value="{{ listing.id }}"/>
               <div class="form-group">
                 <label for="property_name" class="col-form-label">Property:</label>
-                <input type="text" name="listing" class="form-control" value="{{ listing.title }}" disabled>
+                <input type="text" name="listing" class="form-control" value="{{ listing.title }}">
               </div>
               <div class="form-group">
                 <label for="name" class="col-form-label">Name:</label>
